<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/light_blue" >

        <TextView
            android:id="@+id/tv_titlebar_tradition_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="10dip" >

        <!-- 表格布局：第一行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_top_corner_no_bottom_line"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:text="@string/account" >
            </TextView>

            <EditText
                android:id="@+id/edtTxt_import_account"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="17sp" >
            </EditText>
        </TableRow>
        <!-- 表格布局：第二行 -->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_corner_no_top_line"
            android:padding="10dip" >

            <TextView
                android:id="@+id/tv_course_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:text="@string/password" >
            </TextView>

            <EditText
                android:id="@+id/edtTxt_import_password"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="17sp" >
            </EditText>
        </TableRow>
    </TableLayout>
    
    <Button
        android:id="@+id/btn_import_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_fetch_bg"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17sp" >
    </Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/btn_import_lesson"
            style="@style/ImageButton"
            android:drawableTop="@drawable/lesson"
            android:text="@string/lesson_query" />

        <Button
            android:id="@+id/btn_import_grade"
            style="@style/ImageButton"
            android:drawableTop="@drawable/grade"
            android:text="@string/grade_query" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

         <ScrollView
             android:id="@+id/sl_course"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:background="@color/light_blue" >

             <TextView
                 android:id="@+id/tv_main_log"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:textColor="@color/white" />
         </ScrollView>

        </RelativeLayout>
    
    

</LinearLayout>